<resources>
    <string name="app_name">TimeTableApp</string>
    <string name="roll_number">Roll Number</string>
    <string name="enter_your_roll_number">Enter Your Roll Number</string>
    <string name="submit">Submit</string>
    <string name="enter_subject">Enter Subject</string>
    <string name="enter_year">Enter Year</string>
    <string name="enter_venue">Enter Venue</string>
    <string name="professor_s_name">Professor\'s Name</string>
    <string-array name="branch_array">
        <item>CSE</item>
        <item>ECE</item>
        <item>ME</item>
        <item>CE</item>
        <item>BT</item>
        <item>CL</item>
        <item>EEE</item>
        <item>EP</item>
        <item>CST</item>
        <item>MC</item>
    </string-array>
    <string-array name="subject_array"></string-array>
    <string-array name="day_of_week">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
    </string-array>
    <string-array name="day_ids">
        <item>mon_slots</item>
        <item>tue_slots</item>
        <item>wed_slots</item>
        <item>thu_slots</item>
        <item>fri_slots</item>

    </string-array>
    <string-array name="d_of_week">
        <item>M</item>
        <item>T</item>
        <item>W</item>
        <item>T</item>
        <item>F</item>
    </string-array>
    <string-array name="time_slot_list">
        <item>08:00 AM</item>
        <item>09:00 AM</item>
        <item>10:00 AM</item>
        <item>11:00 AM</item>
        <item>12:00 AM</item>
        <item>13:00 PM</item>
        <item>14:00 PM</item>
        <item>15:00 PM</item>
        <item>16:00 PM</item>
        <item>17:00 PM</item>
        <item>18:00 PM</item>
    </string-array>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_start_time">Enter Start Time</string>
    <string name="enter_end_time">Enter End Time</string>
    <string name="add_slot">Add Slot</string>
    <string name="add_subject">Add Subject</string>
    <string name="view_time_table">View Time Table</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
</resources>
